--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,10 @@ jobs:
 
       - name: Test application
         run: ci/unit-test-app.sh
+
+      - name: Upload repo
+        uses: actions/upload-artifact@v4
+        with:
+          name: code
+          path: .
+          include-hidden-files: true
