--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,18 @@ jobs:
           name: code
           path: .
           include-hidden-files: true
+  
+  Linting:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+    - name: Donwload code
+      uses: actions/download-artifact@v4
+      with:
+        name: code
+        path: .
+    - name: Run lintitng
+      uses: super-linter/super-linter/slim@v7
+      env:
+        DEFAULT_BRANCH: main
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
