--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,15 @@ name: CI
 # Controls when the workflow will run
 on: push
 
+env:
+  github_username: ${{ github.actor }}
+  github_password: ${{ secrets.GITHUB_TOKEN }}
+  GIT_COMMIT: ${{ github.sha }}
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  Build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
@@ -34,7 +39,7 @@ jobs:
   
   Linting:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [Build]
     steps:
     - name: Donwload code
       uses: actions/download-artifact@v4
@@ -47,3 +52,21 @@ jobs:
         DEFAULT_BRANCH: main
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DISABLE_ERRORS: true
+
+  Docker-Image:
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+    needs: [Build]
+    steps:
+    - name: Download code
+      uses: actions/download-artifact@v4
+      with:
+        name: code
+        path: .
+    - name: Build docker
+      shell: bash
+      run: ci/build-docker.sh
+    - name: Push docker
+      shell: bash
+      run: ci/push-docker.sh
