Set github_username to 'rhandarov'

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 on: push
 
 env:
-  github_username: ${{ github.actor }}
+  github_username: rhandarov
   github_password: ${{ secrets.GITHUB_TOKEN }}
   GIT_COMMIT: ${{ github.sha }}
 
