--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,6 +100,8 @@ jobs:
   Edit-or-config-checks:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: editorconfig-checker/action-editorconfig-checker@main
-      - run: editorconfig-checker
+    - name: Cloning repo
+      uses: actions/checkout@v4
+    - name: Running checks
+      uses: editorconfig-checker/action-editorconfig-checker@main
+    - run: editorconfig-checker
