--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,24 +21,24 @@ jobs:
       uses: editorconfig-checker/action-editorconfig-checker@main
     - run: editorconfig-checker
 
-  # Markdon-checks:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Clonning repo
-  #     uses: actions/checkout@v4
-  #   - name: Run markdown lint
-  #     uses: nosborn/github-action-markdown-cli@v3.5.0
-  #     with:
-  #       files: .
-  #       config_file: .markdownlint.yaml
-  #       dot: true
+  Markdon-checks:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Clonning repo
+      uses: actions/checkout@v4
+    - name: Run markdown lint
+      uses: nosborn/github-action-markdown-cli@v3.5.0
+      with:
+        files: .
+        # config_file: .markdownlint.yaml
+        dot: true
 
   # This workflow contains a single job called "build"
   Build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
-    needs: [Edit-or-config-checks]
+    needs: [Edit-or-config-checks, Markdon-checks]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
