--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       uses: nosborn/github-action-markdown-cli@v3.5.0
       with:
         files: .
-        # config_file: .markdownlint.yaml
+        config_file: .markdownlint.yaml
         dot: true
 
   # This workflow contains a single job called "build"
