--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,33 +12,46 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # Edit-or-config-checks:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Cloning repo
-  #     uses: actions/checkout@v4
-  #   - name: Running checks
-  #     uses: editorconfig-checker/action-editorconfig-checker@main
-  #   - run: editorconfig-checker
+  Sonar-cloud-check:
+    runs-on: ubuntu-latest
+    needs: [Performance-test]
+    steps:
+    - name: Clonning repo
+      uses: actions/checkout@v4
+    - name: SonarQube Scan
+      uses: SonarSource/sonarqube-scan-action@v6.0.0  # Ex: v4.1.0 or sha1, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  # Markdon-checks:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Clonning repo
-  #     uses: actions/checkout@v4
-  #   - name: Run markdown lint
-  #     uses: nosborn/github-action-markdown-cli@v3.5.0
-  #     with:
-  #       files: .
-  #       config_file: .markdownlint.yaml
-  #       dot: true
+  Edit-or-config-checks:
+    runs-on: ubuntu-latest
+    needs: [Sonar-cloud-check]
+    steps:
+    - name: Cloning repo
+      uses: actions/checkout@v4
+    - name: Running checks
+      uses: editorconfig-checker/action-editorconfig-checker@main
+    - run: editorconfig-checker
+
+  Markdon-checks:
+    runs-on: ubuntu-latest
+    needs: [Sonar-cloud-check]
+    steps:
+    - name: Clonning repo
+      uses: actions/checkout@v4
+    - name: Run markdown lint
+      uses: nosborn/github-action-markdown-cli@v3.5.0
+      with:
+        files: .
+        config_file: .markdownlint.yaml
+        dot: true
 
   # This workflow contains a single job called "build"
   Build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
-    # needs: [Edit-or-config-checks, Markdon-checks]
+    needs: [Edit-or-config-checks, Markdon-checks]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -119,13 +132,3 @@ jobs:
     - name: Execute performance test
       run: bash ci/performance-test.sh
 
-  Sonar-cloud-check:
-    runs-on: ubuntu-latest
-    needs: [Performance-test]
-    steps:
-    - name: Clonning repo
-      uses: actions/checkout@v4
-    - name: SonarQube Scan
-      uses: SonarSource/sonarqube-scan-action@<action version or sha1> # Ex: v4.1.0 or sha1, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
