Integrate SonarQube for code quality analysis
Add SonarQube plugin and configuration properties

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,14 @@ plugins {
     id "net.ltgt.apt-eclipse" version "0.21"
     id "com.github.johnrengelman.shadow" version "5.0.0"
     id "application"
+    id "org.sonarqube" version "7.0.1.6134"
+}
+
+sonar {
+  properties {
+    property "sonar.projectKey", "RHandarov_github-actions-katas-2"
+    property "sonar.organization", "rhandarov"
+  }
 }
 
 
