--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,41 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+# This workflow contains a single job called "build"
+  Build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    container: gradle:6-jdk11
+    needs: [Edit-or-config-checks, Markdon-checks]
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Clone down repository
+        uses: actions/checkout@v4
+
+      - name: Build application
+        run: ci/build-app.sh
+
+      - name: Test application
+        run: ci/unit-test-app.sh
+
+      - name: Upload repo
+        uses: actions/upload-artifact@v4
+        with:
+          name: code
+          path: .
+          include-hidden-files: true
+
   Sonar-cloud-check:
     runs-on: ubuntu-latest
+    needs: [Build]
     steps:
-    - name: Clonning repo
-      uses: actions/checkout@v4
+    - name: Donwload code
+      uses: actions/download-artifact@v4
+      with:
+        name: code
+        path: .
     - name: SonarQube Scan
       uses: SonarSource/sonarqube-scan-action@v6.0.0  # Ex: v4.1.0 or sha1, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
       env:
@@ -44,32 +74,6 @@ jobs:
         files: .
         config_file: .markdownlint.yaml
         dot: true
-
-  # This workflow contains a single job called "build"
-  Build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    container: gradle:6-jdk11
-    needs: [Edit-or-config-checks, Markdon-checks]
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Clone down repository
-        uses: actions/checkout@v4
-
-      - name: Build application
-        run: ci/build-app.sh
-
-      - name: Test application
-        run: ci/unit-test-app.sh
-
-      - name: Upload repo
-        uses: actions/upload-artifact@v4
-        with:
-          name: code
-          path: .
-          include-hidden-files: true
   
   Linting:
     runs-on: ubuntu-latest
