--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,11 +41,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [Build]
     steps:
-    - name: Donwload code
-      uses: actions/download-artifact@v4
-      with:
-        name: code
-        path: .
+    - name: Cloning repo
+      uses: actions/checkout@v4
     - name: SonarQube Scan
       uses: SonarSource/sonarqube-scan-action@v6.0.0  # Ex: v4.1.0 or sha1, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
       env:
