Update sonar organization name

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.organization=rhandarov
+sonar.organization=radostin-handarov
 sonar.projectKey=RHandarov_github-actions-katas-2
 
 # relative paths to source directories. More details and properties are described
