--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Run snyk
-      working-directory: ${{github.workspace}}
+      working-directory: ${{github.workspace}}/app
       run: |
         npm install -g snyk
         snyk auth ${{ secrets.SNYK_TOKEN }}
