--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,45 @@ jobs:
         npm install -g snyk
         snyk auth ${{ secrets.SNYK_TOKEN }}
         snyk test
+
+  Edit-or-config-checks:
+    runs-on: ubuntu-latest
+    needs: [security]
+    steps:
+    - name: Cloning repo
+      uses: actions/checkout@v4
+    - name: Running checks
+      uses: editorconfig-checker/action-editorconfig-checker@main
+    - run: editorconfig-checker
+
+  Markdon-checks:
+    runs-on: ubuntu-latest
+    needs: [security]
+    steps:
+    - name: Clonning repo
+      uses: actions/checkout@v4
+    - name: Run markdown lint
+      uses: nosborn/github-action-markdown-cli@v3.5.0
+      with:
+        files: .
+        config_file: .markdownlint.yaml
+        dot: true
+
+  Linting:
+    runs-on: ubuntu-latest
+    needs: [security]
+    steps:
+    - name: Donwload code
+      uses: actions/download-artifact@v4
+      with:
+        name: code
+        path: .
+    - name: Run lintitng
+      uses: super-linter/super-linter/slim@v7
+      env:
+        DEFAULT_BRANCH: main
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DISABLE_ERRORS: true
 # This workflow contains a single job called "build"
   Build:
     # The type of runner that the job will run on
@@ -57,45 +96,6 @@ jobs:
       uses: SonarSource/sonarqube-scan-action@v6.0.0  # Ex: v4.1.0 or sha1, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-  Edit-or-config-checks:
-    runs-on: ubuntu-latest
-    needs: [Sonar-cloud-check]
-    steps:
-    - name: Cloning repo
-      uses: actions/checkout@v4
-    - name: Running checks
-      uses: editorconfig-checker/action-editorconfig-checker@main
-    - run: editorconfig-checker
-
-  Markdon-checks:
-    runs-on: ubuntu-latest
-    needs: [Sonar-cloud-check]
-    steps:
-    - name: Clonning repo
-      uses: actions/checkout@v4
-    - name: Run markdown lint
-      uses: nosborn/github-action-markdown-cli@v3.5.0
-      with:
-        files: .
-        config_file: .markdownlint.yaml
-        dot: true
-  
-  Linting:
-    runs-on: ubuntu-latest
-    needs: [Build]
-    steps:
-    - name: Donwload code
-      uses: actions/download-artifact@v4
-      with:
-        name: code
-        path: .
-    - name: Run lintitng
-      uses: super-linter/super-linter/slim@v7
-      env:
-        DEFAULT_BRANCH: main
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        DISABLE_ERRORS: true
 
   Docker-Image:
     runs-on: ubuntu-latest
