--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
+    needs: [Edit-or-config-checks, Markdon-checks, Linting]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
