--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         ./gradlew build
         apt-get update
-        apt-get install npm
+        apt-get install -y npm
         npm install -g snyk
         snyk auth ${{ secrets.SNYK_TOKEN }}
         snyk test
